--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script type="text/javascript" src="js/bootsrap.min.js"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="js/jquery-1.12.4.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
     <title>PING PONG</title>
   </head>
   <body>
@@ -13,15 +14,15 @@
     </header>
     <div class="container">
       <div class="row">
-        <form input="play">
+        <form id="play">
           <div class="col-md-6">
-            <p>Let's Play
-              <label for="userNumber"></label>
-              <input id="userNumber" type="text">
+            <p>Let's Play</p>
+            <label for="user-number">Enter a number</label>
+            <input id="user-number" type="text">
             <button id="submit" type="submit">Play</button>
           </div>
           <div class="col-md-6">
-            <ul id="result"></ul>
+            <ul id="result-field"></ul>
           </div>
       </div>
       </form>
