--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-1.12.4.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <title>PING PONG</title>
   </head>
   <body>
-    <header class="navbar">
-      <h1>PING PONG</h1>
-    </header>
     <div class="container">
+      <header class="navbar">
+        <h1>PING PONG</h1>
+      </header>
       <div class="row">
-        <form id="play">
-          <div class="col-md-6">
-            <p>Let's Play</p>
-            <label for="user-number">Enter a number</label>
-            <input id="user-number" type="text">
-            <button id="submit" type="submit">Play</button>
-          </div>
-          <div class="col-md-6">
-            <ul id="result-field"></ul>
-          </div>
+        <div class="col-xs-6">
+          <h3>Can you find the pattern before time's up?</h3>
+          <p><em>Enter a number. The bigger the number, the more time to solve!</em></p>
+          <p>Click "PLAY" to see one number at a time.<br>Click "REVEAL ALL" to see the whole pattern and forfeit the game.</p>
+          <label for="user-number"</label>
+          <input id="user-number" type="text" placeholder="Enter a number">
+          <button id="play" type="button">PLAY</button>
+          <button id="reveal-all" type="button">REVEAL ALL</button>
+        </div>
+        <div class="col-xs-6">
+          <ul id="result-field"></ul>
+        </div>
       </div>
-      </form>
     </div>
   </body>
 </html>
