--- a/index.html
+++ b/index.html
@@ -14,17 +14,32 @@
         <h1>PING PONG</h1>
       </header>
       <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-6 main">
           <h3>Can you find the pattern before time's up?</h3>
           <p><em>Enter a number. The bigger the number, the more time to solve!</em></p>
           <p>Click "PLAY" to see one number at a time.<br>Click "REVEAL ALL" to see the whole pattern and forfeit the game.</p>
           <label for="user-number"</label>
           <input id="user-number" type="text" placeholder="Enter a number">
-          <button id="play" type="button">PLAY</button>
-          <button id="reveal-all" type="button">REVEAL ALL</button>
+          <button id="play" type="button" enabled>PLAY</button>
+          <button id="reveal-all" type="button">REVEAL ALL</button><br><br><br>
+          <button id="reset" type="button">RESET TO PLAY AGAIN</button><br><br>
+          <div id="rules">
+            <hr>
+            <ol>
+              <h3>RULES</h3>
+              <li>Numbers divisible by 3 are replaced with "ping".</li>
+              <li>Numbers divisible by 5 are replaced with "pong".</li>
+              <li>Numbers divisible by 15 are replaced with "ping-pong".</li>
+            </ol>
+          </div>
         </div>
         <div class="col-xs-6">
-          <ul id="result-field"></ul>
+          <div id=play-div>
+            <ul id="play-field"></ul>
+          </div>
+          <div id=reveal-all-div>
+            <ul id="reveal-all-field"></ul>
+          </div>
         </div>
       </div>
     </div>
